--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -1,12 +1,40 @@
+.list {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 8px;
+  justify-content: end;
+  margin-left: 345px;
+}
+/* 
 .item {
-  font-weight: 600;
+  padding: 14px 40px;
+  border-radius: 30px;
+  background-color: #fbfbfb;
+  border: 1px solid #191a15;
+} */
+
+.link {
+  color: #191a15;
+  text-decoration: none;
+
+  padding: 14px 40px;
+  border-radius: 30px;
+  background-color: #fbfbfb;
+  border: 1px solid #191a15;
+ 
+}
+
+.default {
   font-size: 20px;
   line-height: 1.2;
   color: #191a15;
   text-decoration: none;
 }
 
-.item a {
-    color: #191a15;
-    text-decoration: none;
-  }
+.active {
+  position: relative;
+  color:  #fbfbfb;
+  background-color: #fc832c;
+  border: none;
+}
