--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -10,7 +10,8 @@
   justify-content: center;
   background-color: #fc832c;
   transition: background-color var(--animation);
-  height: 60px;
+  height: 24px;
+  width: 107px;
   border: none;
 }
 
