add cvg, upd Reviews, Home page

--- a/src/components/RatingStars/RatingStars.module.css
+++ b/src/components/RatingStars/RatingStars.module.css
@@ -1,9 +1,9 @@
 .starIcon {
-    fill: var(--main-rating-color);
+    fill: yellow;
   }
   
   .starIconGrey {
-    fill: var(--main-badges-color);
+    fill: gray;
   }
   
   .starsWrap {
@@ -11,4 +11,5 @@
     align-items: center;
     justify-content: center;
     gap: 4px;
+   
   }
