--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,9 @@
 .wrap{
     display: flex;
     flex-direction: row;
-    align-items: center;    
+    align-items: center;  
+    margin-top: 40px;
+    margin-bottom: 40px;  
 }
 
 
