--- a/src/components/Auth/Auth.module.css
+++ b/src/components/Auth/Auth.module.css
@@ -38,3 +38,19 @@
   background-color: #fc832c;
   border: none;
 }
+
+.name{
+  font-family: Inter, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+  margin-right: 20px;
+
+}
+
+.personIcon{
+color:#fff;
+width: 24px;
+border-radius: 4px;
+background-color: #fc832c;
+}
