--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   margin: 0 auto;
   padding: 20px;
   border: 1px solid #ccc;
@@ -10,6 +11,7 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   align-content: center;
   justify-content: center;
+  text-align: left;
 }
 
 .title {
