--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -1,1 +1,17 @@
-
+.btn{
+    margin: 0 auto;
+    background-color: #fc832c ;
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    padding: 14px 48px;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    display: block;
+    margin-top: 64px;
+    transition: all 0.3s linear;
+    &:hover {
+      background-color:  #f37113;
+}
+}
