--- a/src/components/ReviewItem/ReviewItem.module.css
+++ b/src/components/ReviewItem/ReviewItem.module.css
@@ -1,37 +1,55 @@
 .wrap {
-    display: flex;
-    align-items: center;
-    gap: 16px;
-    margin-bottom: 16px;
-  }
-  
-  .nameWrap {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-  }
-  
-  .firstLetter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 600;
-    font-size: 24px;
-    line-height: 1.33;
-    width: 60px;
-    height: 60px;
-    border-radius: 60px;
-    color: var(--main-button-color);
-    background-color: var(--main-badges-color);
-  }
-  
-  .name {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-  }
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
 
-  .text{
-    align-items: start;
-    text-align: start;
-  }
+.nameWrap {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.firstLetter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33;
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  background-color: #fc832c33;
+  color: #fc832c;
+  border-radius: 44px;
+}
+
+.name {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #191a15;
+}
+
+.text {
+  align-items: start;
+  text-align: start;
+  color: #8a8a89;
+}
+
+.rating {
+  font-weight: 500;
+  color: #191a15;
+  margin-left: 8px;
+}
+
+.starIcon {
+  width: 16px;
+  height: 16px;
+  left: 0px;
+  color: #ffc531;
+  margin-right: 8px;
+}
