--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@ body {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
-  background-color: #C8C1C1; 
+  /* background-color: #C8C1C1;  */
+  background-color: #FBFBFB;
 }
 
 h1,
