--- a/src/components/Login/Login.module.css
+++ b/src/components/Login/Login.module.css
@@ -2,27 +2,34 @@
   width: 566px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  text-align: center;
   margin: 0 auto;
-  padding: 20px;
+  padding: 64px;
   border: 1px solid #ccc;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  align-content: center;
-  justify-content: center;
   text-align: left;
 }
 
 .title {
-  font-weight: 40px;
+  font-size: 40px;
+  line-height: 48px;
   color: #191a15;
   margin-bottom: 10px;
+  text-align: left;
 }
 
 .text {
   width: 438px;
-  margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  color: #8a8a89;
+}
+
+.inputWrap{
+display: flex;
+flex-direction: column;
+gap: 18px;
+
 }
 
 .form {
@@ -36,9 +43,10 @@
 
 .input {
   width: 438px;
-  padding: 10px;
+  padding: 16px 18px;
   border: 1px solid #ccc;
   border-radius: 12px;
+  
 }
 
 .btn {
@@ -63,12 +71,12 @@
 
 .passwordContainer {
   position: relative;
-  margin-bottom: 10px;
+  margin-bottom: 40px;
 }
 
 .eyeIcon {
   position: absolute;
-  top: 50%;
+  top: 20%;
   right: 10px;
   transform: translateY(30%);
   cursor: pointer;
