--- a/src/components/Register/Register.module.css
+++ b/src/components/Register/Register.module.css
@@ -4,7 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin: 0 auto;
-  padding: 20px;
+  padding: 64px;
   border-radius: 12px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   text-align: left;
@@ -14,6 +14,17 @@
   font-weight: 40px;
   color: #191a15;
   margin-bottom: 15px;
+  width: 438px;
+  font-size: 40px;
+  line-height: 48px;
+}
+
+.text {
+  margin-top: 20px;
+  margin-bottom: 40px;
+  color: #8a8a89;
+  width: 438px;
+  font-size: 16px;
 }
 
 .label {
@@ -22,11 +33,9 @@
 }
 
 .inputWrap {
-  width: 438px;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 12px;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
 }
 
 .errorText {
@@ -35,15 +44,15 @@
 }
 
 .input {
-  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 12px;
+  width: 438px;
+  padding: 16px 18px;
 }
 
 .inputField {
   width: 100%;
-  padding: 10px;
-  padding-right: 40px;
+  padding: 16px 18px;
   border: 1px solid #ccc;
   border-radius: 12px;
 }
@@ -59,6 +68,7 @@
   color: #191a15;
   margin-bottom: 15px;
 }
+
 .btn {
   display: inline-flex;
   text-decoration: none;
@@ -74,7 +84,7 @@
   width: 438px;
   border: none;
   margin-bottom: 15px;
-  margin-top: 15px;
+  margin-top: 40px;
 }
 
 .btn:hover {
@@ -83,7 +93,7 @@
 
 .eyeIcon {
   position: absolute;
-  top: 50%;
+  top: 20%;
   right: 20px;
   transform: translateY(30%);
   cursor: pointer;
