--- a/src/App.css
+++ b/src/App.css
@@ -10,5 +10,5 @@
   justify-content: space-between;  
   align-items: center;    
   gap: 20px;             
-  padding: 10px;          
+  margin-bottom: 64px;       
 }
