--- a/src/components/Appointment/Appointment.module.css
+++ b/src/components/Appointment/Appointment.module.css
@@ -51,6 +51,7 @@
   border: 1px solid #ccc;
   border-radius: 12px;
   color: #191a15;
+  margin-bottom: 16px;
 }
 
 .phoneTimeWrap {
@@ -58,6 +59,7 @@
   flex-direction: row;
   align-items: center;
   gap: 8px;
+  margin-bottom: 16px;
 }
 .inputPhone {
   width: 232px;
@@ -66,6 +68,7 @@
   border: 1px solid #ccc;
   border-radius: 12px;
   color: #191a15;
+  margin-bottom: 16px;
 }
 
 .inputEmail {
@@ -75,6 +78,7 @@
   border: 1px solid #ccc;
   border-radius: 12px;
   color: #191a15;
+  margin-bottom: 16px;
 }
 
 .inputComment {
@@ -85,6 +89,7 @@
   border-radius: 12px;
   color: #191a15;
 }
+
 .btn {
   margin-top: 40px;
   background-color: #fc832c;
@@ -95,3 +100,8 @@
   border-radius: 30px;
   border: none;
 }
+
+
+.btn:hover {
+    background-color: #f37113;
+  }
