--- a/src/components/PsychologistsCard/PsychologistsCard.module.css
+++ b/src/components/PsychologistsCard/PsychologistsCard.module.css
@@ -8,6 +8,7 @@
   width: 1180px;
   margin: 20px auto;
   padding: 20px;
+  
 }
 
 .sectionsWrap {
@@ -149,26 +150,37 @@
   background-color: #f3f3f3;
   gap: 10px;
   border-radius: 24px;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 8px;
+  margin-bottom: 8px;
+  margin-left: 4px;
 }
 
 .grey {
   color: #8a8a89;
 }
 
-.about{
+.about {
   margin-bottom: 48px;
-  color: #191A1580; 
+  color: #191a1580;
   line-height: 20px;
   font-size: 16px;
 }
 .appointmentBtn {
   margin-top: 40px;
-  background-color: #FC832C;
+  background-color: #fc832c;
   color: #fff;
   width: 227px;
   height: 48px;
   padding: 14px 32px;
   border-radius: 30px;
   border: none;
-  
+}
+
+.appointmentBtn:hover {
+  background-color: #f37113;
 }
