--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -4,7 +4,9 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-}
+  margin-bottom: 64px;
+  
+ }
 
 .left { 
   max-width: 60%;
