--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,4 +1,4 @@
-.modalOverlay {
+   .modalOverlay {
     position: fixed;
     top: 0;
     left: 0;
@@ -8,6 +8,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 1000;
+    overflow: hidden;
   }
   
   .modalContent {
@@ -15,7 +17,9 @@
     padding: 20px;
     border-radius: 10px;
     max-width: 90%;
-    z-index: 1000;
+    max-height: 90vh;
+    overflow-y: auto;
+    position: relative;
   }
   
   .closeBtn {
@@ -24,5 +28,13 @@
     right: 10px;
     font-size: 24px;
     cursor: pointer;
+    background: none;
+    border: none;
+    color: #333;
+  }
+  
+  .closeBtn:hover, :focus {
+    color: #fc832c;
+    border: none;
   }
   
