--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -1,14 +1,13 @@
 .wrap {
-  /* width: 1440px; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 64px;
-  
- }
+  flex-wrap: wrap;
+}
 
-.left { 
+.left {
   max-width: 60%;
   display: flex;
   flex-direction: column;
@@ -43,7 +42,6 @@
   max-width: 40%;
   padding: 20px;
   margin: 0 auto;
-
   position: relative;
 }
 
@@ -53,94 +51,154 @@
   border-radius: 10px;
 }
 
-.mainQuestCont {
+.mainQuestCont,
+.people,
+.expPsyco {
   position: absolute;
-  top: 210px;
-  left: -10px;
-  rotate: -15deg;
-  width: 40px;
-  height: 40px;
-  background-color: #54be96;
-  border-radius: 10px;
-  color: #fff;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 17px;
-}
-
-.svgMainQuestion {
-  width: 20px;
-  height: 20px;
-}
-
-.peopleIcon {
-  width: 24px;
-  height: 24px;
-}
-
-.people {
-  position: absolute;
-  top: 68px;
-  right: -10px;
-  rotate: 15deg;
-  width: 40px;
-  height: 40px;
-  background-color: #fbc75e;
-  border-radius: 10px;
   color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .expPsyco {
-  position: absolute;
   bottom: 95px;
   left: -70px;
-  border-radius: 20px;
   width: 311px;
   height: 118px;
   background-color: #fc832c;
-  color: #fff;
-  display: flex;
-  flex-direction: row;
   gap: 16px;
-  justify-content: center;
-  align-items: center;
+  flex-direction: row;
+  border-radius: 20px;
 }
 
-.checkCont {
-  width: 54px;
-  height: 54px;
-  border-radius: 13px;
-  background-color: #fff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (max-width: 768px) {
+  .wrap {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .left {
+    max-width: 100%;
+    padding-right: 0;
+    gap: 15px;
+  }
+
+  .title {
+    font-size: 40px;
+    text-align: center;
+  }
+
+  .text {
+    font-size: 14px;
+    width: 100%;
+    text-align: center;
+  }
+
+  .right {
+    max-width: 100%;
+    padding: 20px;
+    margin: 20px 0;
+    position: relative;
+    text-align: center;
+  }
+
+  .img {
+    max-width: 100%;
+    max-height: 300px;
+  }
+
+  .mainQuestCont,
+  .people {
+    position: relative;
+    top: 0;
+    left: 0;
+  }
+
+  .expPsyco {
+    width: 100%;
+    bottom: 20px;
+    left: 0;
+    padding: 10px;
+  }
 }
 
-.iconCheck {
-  width: 32px;
-  height: 32px;
-  color: #fc832c;
+@media (min-width: 768px) and (max-width: 1024px) {
+  .wrap {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: flex-start;
+  }
+
+  .left {
+    max-width: 50%;
+    padding-right: 40px;
+  }
+
+  .right {
+    max-width: 50%;
+  }
+
+  .title {
+    font-size: 60px;
+    text-align: left;
+  }
+
+  .text {
+    font-size: 16px;
+    width: 90%;
+  }
+
+  .img {
+    max-width: 80%;
+  }
+
+  .expPsyco {
+    bottom: 50px;
+    left: -20px;
+    width: 250px;
+  }
 }
 
-.expPsycoText {
-  display: block;
-  font-size: 14px;
-  text-align: left;
-  color: rgba(250, 250, 250, 0.5);
-}
+@media (min-width: 1024px) {
+  .wrap {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-.whiteAssent {
-  display: block;
-  color: #fff;
-  font-size: 24px;
-  font-weight: 700;
-}
+  .left {
+    max-width: 60%;
+    padding-right: 80px;
+  }
 
-.textCont {
-  display: flex;
-  flex-direction: column;
+  .right {
+    max-width: 40%;
+    padding: 20px;
+    margin: 0;
+  }
+
+  .title {
+    font-size: 80px;
+    text-align: left;
+  }
+
+  .text {
+    font-size: 16px;
+    width: 510px;
+    margin-top: 20px;
+  }
+
+  .img {
+    max-width: 434px;
+    max-height: 526px;
+  }
+
+  .expPsyco {
+    bottom: 95px;
+    left: -70px;
+    width: 311px;
+    height: 118px;
+    background-color: #fc832c;
+    color: #fff;
+  }
 }
