--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -51,14 +51,25 @@
   border-radius: 10px;
 }
 
-.mainQuestCont,
-.people,
-.expPsyco {
+.mainQuestCont {
   position: absolute;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #fff;
+
+  top: 210px;
+  left: -10px;
+  rotate: -15deg;
+  width: 40px;
+  height: 40px;
+  background-color: #54be96;
+  border-radius: 10px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 17px;
 }
 
 .expPsyco {
@@ -68,6 +79,74 @@
   height: 118px;
   background-color: #fc832c;
   gap: 16px;
+  flex-direction: row;
+  border-radius: 20px;
+}
+
+.svgMainQuestion {
+  width: 20px;
+  height: 20px;
+}
+.peopleIcon {
+  width: 24px;
+  height: 24px;
+}
+.people {
+  position: absolute;
+  top: 68px;
+  right: -10px;
+  rotate: 15deg;
+  width: 40px;
+  height: 40px;
+  background-color: #fbc75e;
+  border-radius: 10px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.expPsyco {
+  position: absolute;
+  bottom: 95px;
+  left: -70px;
+  border-radius: 20px;
+  width: 311px;
+  height: 118px;
+  background-color: #fc832c;
+  color: #fff;
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+}
+.checkCont {
+  width: 54px;
+  height: 54px;
+  border-radius: 13px;
+  background-color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.iconCheck {
+  width: 32px;
+  height: 32px;
+  color: #fc832c;
+}
+.expPsycoText {
+  display: block;
+  font-size: 14px;
+  text-align: left;
+  color: rgba(250, 250, 250, 0.5);
+}
+
+.whiteAssent {
+  display: block;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
   flex-direction: row;
   border-radius: 20px;
 }
@@ -108,11 +187,10 @@
     max-height: 300px;
   }
 
-  .mainQuestCont,
-  .people {
+  .mainQuestCont {
     position: relative;
-    top: 0;
-    left: 0;
+    top: -150px;
+    left: -25px;
   }
 
   .expPsyco {
@@ -120,6 +198,8 @@
     bottom: 20px;
     left: 0;
     padding: 10px;
+    height: 86px;
+    width: 200px;
   }
 }
 
